create book image upload complete
